# linenotify-python

./: .gitignore  README.md  pyproject.toml
linenotify/: __init__.py  exception.py  module.py  notify.py  service.py  status.py  sticker.py  validate.py  validations.py
tests/: __init__.py  tests_offline.py  tests_online.py
